NOT COMPLETE - Fixed tests in HearingRepositoryFacadeIntTest
Due to bidirectional relations, Hibernate and Lombok CASCADE and SAVE/UPdate

it was causing errors related to detached entities (associations missing)

This work is incomplete atm.